--- a/gb/21/8/3/n13135249.md
+++ b/gb/21/8/3/n13135249.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gmqtdp3059/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gmqtdp3059/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gmqtdp3059/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gmqtdp3059/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gmqtdp3059/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>嘉义市东市场今起推行动支付</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13135252-509840-600x400.jpeg" />
 <h6>嘉义东市场行动支付，方便又防疫。（嘉义市政府提供）
 </h6>
 <hr>
-<p>【大纪元2021年08月03日讯】（大纪元记者李撷璎台湾嘉义报导）中共病毒（俗称新冠肺炎）疫情影响民生甚钜，虽然现在全国警戒降至二级，嘉义市长黄敏惠持续呼吁市民“松绑不松懈”，除了持续<ahref="https://github.com/gmqtdp3059/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB.md#1">防疫</a>更要为后疫情时代做准备，嘉义市政府从即日起在嘉义人的大灶脚百年东<ahref="https://github.com/gmqtdp3059/djy/blob/master/gb/tag/%E5%B8%82%E5%9C%BA.md#1">市场</a>开始推动<ahref="https://github.com/gmqtdp3059/djy/blob/master/gb/tag/%E8%A1%8C%E5%8A%A8%E6%94%AF%E4%BB%98.md#1">行动支付</a>，将传统<ahref="https://github.com/gmqtdp3059/djy/blob/master/gb/tag/%E5%B8%82%E5%9C%BA.md#1">市场</a>的现钞实体交易行为转换成行动支付，希望以“零接触”的交易模式，打造疫后新生活。</p>
-<figure id="13135251" aria-describedby="caption-13135251" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13135251-509839-450x253.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/08/id13135251-509839-450x253.jpeg" alt="嘉义东市场行动支付，方便又防疫。" width="500" /></a><figcaption id="caption-13135251" class="wp-caption-text">嘉义东市场<ahref="https://github.com/gmqtdp3059/djy/blob/master/gb/tag/%E8%A1%8C%E5%8A%A8%E6%94%AF%E4%BB%98.md#1">行动支付</a>，方便又<ahref="https://github.com/gmqtdp3059/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB.md#1">防疫</a>。（嘉义市政府提供）</figcaption></figure>
+<p>【大纪元2021年08月03日讯】（大纪元记者李撷璎台湾嘉义报导）中共病毒（俗称新冠肺炎）疫情影响民生甚钜，虽然现在全国警戒降至二级，嘉义市长黄敏惠持续呼吁市民“松绑不松懈”，除了持续<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB.md#1">防疫</a>更要为后疫情时代做准备，嘉义市政府从即日起在嘉义人的大灶脚百年东<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B8%82%E5%9C%BA.md#1">市场</a>开始推动<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A1%8C%E5%8A%A8%E6%94%AF%E4%BB%98.md#1">行动支付</a>，将传统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B8%82%E5%9C%BA.md#1">市场</a>的现钞实体交易行为转换成行动支付，希望以“零接触”的交易模式，打造疫后新生活。</p>
+<figure id="13135251" aria-describedby="caption-13135251" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13135251-509839-450x253.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/08/id13135251-509839-450x253.jpeg" alt="嘉义东市场行动支付，方便又防疫。" width="500" /></a><figcaption id="caption-13135251" class="wp-caption-text">嘉义东市场<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A1%8C%E5%8A%A8%E6%94%AF%E4%BB%98.md#1">行动支付</a>，方便又<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB.md#1">防疫</a>。（嘉义市政府提供）</figcaption></figure>
 <p>嘉义市政府从2021年8月1日起以嘉义百年东市场为示范基地，进行行动支付的推广，嘉义市政府建设处处长田长沛表示，行动支付具有许多优点，除了可提升民众付款便利性、增加支付安全性；另外在中共病毒疫情的冲击下，还可以减少病菌的传播。</p>
 <p>外国科学研究期刊《The Lancet Microbe》研究指出，中共病毒停留于铜板上约可存活4小时；停留于纸钞约可存活72小时，如何让传统市场的交易模式转换成行动支付，以降低接触感染，是守护摊商与民众的好方法，所以嘉义市政府积极推动传统市场数位转型的计划，导入行动支付的消费模式，让市场的摊商、店家与民众在防疫期间安心消费。</p>
 <figure id="13135254" aria-describedby="caption-13135254" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13135254-509841-450x338.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/08/id13135254-509841-450x338.jpeg" alt="嘉义东市场行动支付，方便又防疫。" width="500" /></a><figcaption id="caption-13135254" class="wp-caption-text">嘉义东市场行动支付，方便又防疫。（嘉义市政府提供）</figcaption></figure>
@@ -19,47 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/20/4/20/n12046244.md#1">酷碰券扶植电子支付业？ 经长：会整体考量</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/5/4/n12923248.md#1">嘉大引进行动支付智能贩卖机 推广安心食农</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/5/28/n12981796.md#1">线上点餐计程车外送 高市推互助防疫纾困</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/1/n13060310.md#1">疫情期间 行动支付嘉市路边停车每笔减收3元</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/29/n13124746.md#1">ETC推停车行动支付 流程快如简讯实联制</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/3/n13135256.md#1">云林海区时雨量超过百毫米 张丽善：通盘检讨排水功能</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/3/n13135147.md#1">清理家园积水 请依清除清洁消毒防疫三步骤</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/2/n13133482.md#1">黄敏惠视察短时强降雨 全市积水快速退去</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/2/n13133264.md#1">屏东小黄公车8／2起增新园、林边线</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/2/n13132614.md#1">黄卡上第二剂时间延后 嘉市请上1922意愿登记</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/20/n12046244.md#1">酷碰券扶植电子支付业？ 经长：会整体考量</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/4/n12923248.md#1">嘉大引进行动支付智能贩卖机 推广安心食农</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/5/28/n12981796.md#1">线上点餐计程车外送 高市推互助防疫纾困</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/1/n13060310.md#1">疫情期间 行动支付嘉市路边停车每笔减收3元</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/29/n13124746.md#1">ETC推停车行动支付 流程快如简讯实联制</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679209.md#1">111年嘉义优秀青年代表  参访嘉义县政府</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679216.md#1">嘉楠集团捐赠台大云林分院景观花园暨中型巴士</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678761.md#1">结合紫斑蝶季 云林力推铁道观光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678686.md#1">观光、运动政见亮眼 潜水青年力挺庄瑞雄</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678682.md#1">双园断桥家属谢周春米 赞“正义女神”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/gmqtdp3059/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/29/n11223087.md#1" target="_blank">【征文】杨宁：中华文物之殇史无前例</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/20/n10862733.md#1" target="_blank">这些前中共军官为何控告江泽民（8）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/29/n13125465.md#1">【未解之谜】台湾朱秀华 “借尸还魂”60年</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/25/n13113957.md#1">【馨香雅句】中国传统色彩承载了哪些文化</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/23/n13110780.md#1">【忽必烈传】贤后察必辅佐 治家有方教子严</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/20/n13102261.md#1">一首诗惊动皇上  跨越关山圆了情人梦</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/27/n13119494.md#1">【未解之谜】神秘第六感 预见911</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/2/n13134016.md#1">【新闻看点】河南报302人遇难？为何资料不公开</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/2/n13134209.md#1">【时事纵横】多地疫情爆发 甘肃逼僧人还俗</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/2/n13133212.md#1">【新闻大家谈】姚诚：中共军队打仗有致命弱点</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/29/n13125460.md#1">Costco八种食品 既健康又可保持身材</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/31/n13130075.md#1">南京疫情甩锅俄国 中共承认已向全国蔓延</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/1/n13131363.md#1">戴资颖东奥摘银 戴爸隔海打99分不失望</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/31/n13129840.md#1">吴亦凡遭北京警方刑拘 被韩媒称前EXO成员惹议</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/1/n13130307.md#1">康康身体又出状况 “结石卡输尿管”痛爆就医</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/1/n13131811.md#1">郭富城新片剧组撤离泰国 改香港搭景损失千万</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/1/n13131758.md#1">拍戏偶遇邓超广告牌 孙俪搞笑秀夫妻恩爱</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/1/n13130420.md#1">宋承宪《VOICE 4》收尾 剧末伏笔铺梗第5季</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/2/n13133194.md#1">美众院报告：大量证据指向病毒来自武汉病毒所</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/1/n13130775.md#1">大自然的奇迹？ 一棵树矗立在死海的盐岛上</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/7/28/n13122228.md#1">世界第二长寿的人战胜新冠 百岁老人的抗疫秘方</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/1/n13130759.md#1">非洲长颈羚长相奇特 一辈子不喝水也能存活</a></li>
-<li><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/1/n13130659.md#1">这种冰岛鸭子拥有世界最贵的羽绒 众人争抢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gmqtdp3059/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gmqtdp3059/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/3/n13135249.htm">嘉义市东市场今起推行动支付</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/3/n13135249.htm">嘉义市东市场今起推行动支付</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/gmqtdp3059/djy/blob/master/gb/21/8/3/n13135249.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gmqtdp3059/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gmqtdp3059/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gmqtdp3059/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmqtdp3059/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/8/3/n13135249.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
